# 404CTF-2025

./: .gitmodules  LICENSE  README.md
AlgorithmiqueQuantique/: README.md
Cryptanalyse/: README.md
Cryptanalyse/R1R2/: README.md  flag.py  solve.py
Cryptanalyse/planetes-anormales/: README.md  solve.py
Cryptanalyse/you-spin-me-round/: README.md  challenge.py  solve.py
Divers/: README.md
Divers/Pix2Num/: README.md  solve.py
Divers/SpaceTraveler/: .gitignore  Dockerfile  README.md  SOLVE.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  server.ts  tsconfig.json  utils.ts
ExploitationDeBinaires/: README.md
ExploitationDeBinaires/22-bytes-pour-sauver-l-univers/: README.md  build.sh  solve.py  writeup.md
IntelligenceArtificielle/: README.md  flags.txt  pyproject.toml  ruff.toml
InvestigationNumerique/: README.md
Realiste/: README.md
RenseignementEnSourcesOuvertes/: README.md
RetroIngenierie/: README.md
RetroIngenierie/RFC 9452 bis: IP over Rockets with Quality of Service/: .env  Cargo.toml  README.md  make_chall.sh
RetroIngenierie/RFC 9452 bis: IP over Rockets with Quality of Service/src/: insecurity.rs  main.rs  pages.rs  security.rs
RetroIngenierie/RFC 9452 bis: IP over Rockets with Quality of Service/templates/: flag.html.hbs  head.html.hbs  index.html.hbs
RetroIngenierie/RFC 9452 bis: IP over Rockets with Quality of Service/xorbluxator2000/: Cargo.toml
RetroIngenierie/RFC 9452 bis: IP over Rockets with Quality of Service/xorbluxator2000/src/: main.rs
SecuriteMaterielle/: README.md
Web/: README.md
(+117 files in other folders)
